; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyAbs.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarCyAbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MATHVARS1 = common dso_local global i32 0, align 4
@VarCyAbs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarCyAbs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarCyAbs() #0 {
  %1 = load i32, i32* @MATHVARS1, align 4
  %2 = load i32, i32* @VarCyAbs, align 4
  %3 = call i32 @MATH1(i32 %2, double 5.000000e-01)
  %4 = call i32 @EXPECTCY(double 5.000000e-01)
  %5 = load i32, i32* @VarCyAbs, align 4
  %6 = call i32 @MATH1(i32 %5, double -5.000000e-01)
  %7 = call i32 @EXPECTCY(double 5.000000e-01)
  %8 = load i32, i32* @VarCyAbs, align 4
  %9 = call i32 @MATH1(i32 %8, double 0x430A36E2EB1C4320)
  %10 = call i32 @EXPECTCY64(i64 2147483647, i64 4294951488)
  %11 = load i32, i32* @VarCyAbs, align 4
  %12 = call i32 @MATH1(i32 %11, double 0xC30A36E2EB1C4320)
  %13 = call i32 @EXPECTCY64(i64 2147483647, i64 4294951488)
  ret void
}

declare dso_local i32 @MATH1(i32, double) #1

declare dso_local i32 @EXPECTCY(double) #1

declare dso_local i32 @EXPECTCY64(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
